redirecting to the paper link

--- a/src/components/Paper/Paper.module.css
+++ b/src/components/Paper/Paper.module.css
@@ -4,6 +4,10 @@
   color: #FEFFFF;
   border-radius: 10px;
   position: relative;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  gap: .5em;
 }
 
 .paper  p{
